Fix navigation's expand-collapse button being hidden by playground elements.

--- a/src/app/layout/navigation/navigation.component.scss
+++ b/src/app/layout/navigation/navigation.component.scss
@@ -180,6 +180,7 @@
 
 .collapse-expand {
   position: absolute;
+  z-index: 999;
 
   @media screen and (max-width: $smallWidth) {
     bottom: 150px;
